--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 MONGODB_URI = 'mongodb+srv://sharewallet:sharewallet123@sharewallet.hddhuly.mongodb.net'
 
 JWT_SECRET = 'sharewalletsecret#7903897660#25072001'
-NODE_ENV = 'development'
+NODE_ENV = 'production'
 
 SMTP_USER="8f5573001@smtp-brevo.com"
 SMTP_PASSWORD="YvQGJxs2t5qHLgyb"
