Refactor API endpoint formatting in AppContext and Login components to ensure consistent URL structure with leading slashes

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 MONGODB_URI = 'mongodb+srv://sharewallet:sharewallet123@sharewallet.hddhuly.mongodb.net'
 
 JWT_SECRET = 'sharewalletsecret#7903897660#25072001'
-NODE_ENV=production
+NODE_ENV=development
+
 
 
 SMTP_USER="8f5573001@smtp-brevo.com"
