--- a/client/render.yaml
+++ b/client/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: sharewalletmern-frontend
+    name: sharewallet-frontend
     env: static
     staticPublishPath: dist
-    buildCommand: npm run build
     routes:
-      - source: /.*
-        destination: /index.html
+      - type: rewrite
+        source: "/(.*)"
+        destination: "/index.html"
