--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullpage/react-fullpage": "^0.1.48",
     "axios": "^1.9.0",
+    "fullpage.js": "^4.0.36",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
